fix (header): misaligned on firefox

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -135,8 +135,8 @@ p.text--large {
 }
 
 .button--secondary {
-    background-color: rgba(255, 255, 255, 0.9);
-    color: var(--bright-sky-blue);
+  background-color: rgba(255, 255, 255, 0.9);
+  color: var(--bright-sky-blue);
 }
 
 .button--secondary:hover {
@@ -146,8 +146,8 @@ p.text--large {
 }
 
 .button--tertiary {
-    background-color: var(--light-sea-green);
-    border-color: var(--light-sea-green);
+  background-color: var(--light-sea-green);
+  border-color: var(--light-sea-green);
 }
 
 .button--tertiary:hover {
@@ -206,7 +206,6 @@ label {
 /* Page setup */
 
 .page {
-  align-items: center;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 65px 1fr;
